<resources>
    <string name="app_name">Jathika Hela Urumaya</string>
    <string name="sinhala">සිංහල</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Settings</string>
    <string name="action_new">Settings</string>
    <string name="logo_desc">Welcome</string>
    <string name="about">About</string>

    <string name="country_name">Nigeria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //Party
    <string name="party_name">Jathika Hela Urumaya</string>
    //Menu categories
    <string name="values">Values</string>
    <string name="history">History</string>
    <string name="leaders">Leaders</string>
    <string name="message">Message</string>
    <string name="membership">Membership</string>
    <string name="poll">Poll</string>
    <string name="events">Events</string>
    <string name="profile">Profile</string>
    <string name="news">News</string>
    //Leaders
    <string name="pathali">Pathali Champika Ranawaka</string>
    <string name="rathana">Athuraliye Rathana Thero</string>
    <string name="leader">Party Leader</string>
    <string name="vip">VIP</string>

    //JHU history
    <string name="historyAll">The Jathika Hela Urumaya (Sinhalese: ජාතික හෙළ උරුමය, Tamil: ஜாதிக ஹெல உறுமய, often approximated in English as National Heritage Party) is a Right-wing Nationalist political party in Sri Lanka. The JHU was launched in February, 2004 by the lay-based, Sinhala nationalist political party Sihala Urumaya. Founding members include Kolonnawe Sumangala Thero, Uduwe Dhammaloka Thero, Ellawala Medhananda Thero, Dr. Omalpe Sobhitha Thero, Athuraliye Ratana Thero and Thilak Karunaratne.</string>

    //Sign In Page
    <string name="Register">Become a member</string>
    <string name="SignIn">Sign In</string>

    //Registration Page
    <string name="MR">Memeber Registration</string>
    <string name="Name">Full Name</string>
    <string name="UName">NIC</string>
    <string name="Pwd">Password</string>
    <string name="Phone">Phone</string>
    <string name="Email">Email</string>
    <string name="Address">Address</string>
    <string name="District">District</string>

    <string name="Apply">Apply for Membership</string>
    <string name="Cancel">Cancel</string>

    <string name="chart">Pie Chart</string>

    <string name="LeadersMessage">Below is a sample of “Lorem ipsum dolor sit” dummy copy text often used to show font face samples,
        for page layout and design as sample layout text by printers, graphic designers, Web designers,
        people creating Microsoft Word templates, and many other uses.
        It mimics the look of real text quite well as you design and set up your page layouts.
        People search for this Lorem ipsum dummy copy text using all kinds of names, such as Lorem ipsum,
        lorem ipsum dolor sit amet, Lorem, dummy text, loren ipsum (yes, spelled wrong),
        Lorem ipsum sample textipsum loremlorem ipsum sample, Latin copy text, Lorem ipsum text,
        Latin dummy text, template text, sample text, dummy copy text, Latin sample text, HTML dummy text,
        Lorem ipsum dummy text, filler text or copy filling text, and many other names.
        Regardless of what you wish to call it, this text </string>

    <string name="ResetPwd">Reset Password</string>

    //District list
    <string-array name="district_array">
        <item>- Select District -</item>
        <item>Ampara</item>
        <item>Anuradhapura</item>
        <item>Badulla</item>
        <item>Batticalo</item>
        <item>Colombo</item>
        <item>Galle</item>
        <item>Gampaha</item>
        <item>Hambantota</item>
        <item>Jaffna</item>
        <item>Kalutara</item>
        <item>Kandy</item>
        <item>Kegalle</item>
        <item>Kilinochchi</item>
        <item>Kurunegala</item>
        <item>Mannar</item>
        <item>Matale</item>
        <item>Matara</item>
        <item>Moneragala</item>
        <item>Mullaitiv</item>
        <item>Nuwara Eliya</item>
        <item>Polonnaruwa</item>
        <item>Puttalam</item>
        <item>Ratnapura</item>
        <item>Trincomalee</item>
        <item>Vavuniya</item>
    </string-array>

</resources>
