<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    tools:context="org.neosoft.com.JHU.fragments.LoginFragment">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/five" />

        <EditText
            android:id="@+id/edTxtUName"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:layout_alignEnd="@+id/imageView"
            android:layout_alignLeft="@+id/imageView"
            android:layout_alignRight="@+id/imageView"
            android:layout_alignStart="@+id/imageView"
            android:layout_below="@+id/imageView"
            android:layout_marginTop="23dp"
            android:drawableRight="@android:drawable/radiobutton_on_background"
            android:inputType="textPersonName"
            android:text="@string/UName"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/edTxtPwd"
            android:layout_width="250dp"
            android:layout_height="45dp"
            android:drawableRight="@android:drawable/ic_partial_secure"
            android:hint="@string/Pwd"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/btnSignIn"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/edTxtPwd"
            android:layout_alignLeft="@+id/edTxtPwd"
            android:layout_alignRight="@+id/edTxtPwd"
            android:layout_alignStart="@+id/edTxtPwd"
            android:layout_below="@+id/edTxtPwd"
            android:layout_marginTop="14dp"
            android:background="@color/colorPrimary"
            android:text="@string/SignIn" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/btnSubmit"
            android:layout_alignLeft="@+id/btnSubmit"
            android:layout_alignRight="@+id/btnSubmit"
            android:layout_alignStart="@+id/btnSubmit"
            android:layout_below="@+id/btnSubmit"
            android:layout_marginTop="5dp"
            android:background="@color/colorPrimary"
            android:text="@string/Register" />

    </LinearLayout>
</RelativeLayout>
