<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/lCoordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    android:gravity="center"
    tools:context="org.neosoft.com.JHU.fragments.LoginFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/login" />

            <EditText
                android:id="@+id/edTxtUName"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:layout_alignEnd="@+id/imageView"
                android:layout_alignLeft="@+id/imageView"
                android:layout_alignRight="@+id/imageView"
                android:layout_alignStart="@+id/imageView"
                android:layout_below="@+id/imageView"
                android:layout_marginTop="23dp"
                android:drawableRight="@android:drawable/radiobutton_on_background"
                android:hint="@string/UName"
                android:inputType="textPersonName"
                android:textColor="@android:color/black" />

            <EditText
                android:id="@+id/edTxtPwd"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:drawableRight="@android:drawable/ic_partial_secure"
                android:hint="@string/Pwd"
                android:inputType="textPassword"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/reset"
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:gravity="center"
                android:autoLink="all"
                android:linksClickable="true"
                android:textColor="@android:color/holo_red_dark"
                android:text="@string/ResetPwd"/>

            <Button
                android:id="@+id/btnSignIn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/edTxtPwd"
                android:layout_alignLeft="@+id/edTxtPwd"
                android:layout_alignRight="@+id/edTxtPwd"
                android:layout_alignStart="@+id/edTxtPwd"
                android:layout_below="@+id/edTxtPwd"
                android:layout_marginTop="14dp"
                android:background="@drawable/rounded_btn_corners"
                android:text="@string/SignIn" />

            <Button
                android:id="@+id/btnRegister"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/btnSubmit"
                android:layout_alignLeft="@+id/btnSubmit"
                android:layout_alignRight="@+id/btnSubmit"
                android:layout_alignStart="@+id/btnSubmit"
                android:layout_below="@+id/btnSubmit"
                android:layout_marginTop="5dp"
                android:background="@drawable/rounded_btn_corners"
                android:text="@string/Register" />

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1.46"
                android:visibility="gone" />

        </LinearLayout>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
